prototype css layout tweaks

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@ body{
 	display: inline-block;
     width: 210px;
     height: 102px;
+    float: left;
+    clear: right;
 }
 #repaymentChart, #yearsChart{
 	float: left;
+}
+#repaymentChart{
+	clear: left;
 }
 </style>
 </head>
