add buttons, revert silly refactor

--- a/index.html
+++ b/index.html
@@ -148,6 +148,12 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<label for="capAtStandardRepayment"></label><div id = "capLabel">Forgive after matching standard 10 year plan</div>
 			</div>
 		</div>
+		<div id = "buttons">
+			<div class = "button" id = "repayeUndergrad">REPAYE undergraduate</div>
+			<div class = "button" id = "repayeGrad">REPAYE graduate</div>
+			<div class = "button" id = "repayePSLF">REPAYE with PSLF</div>
+			<div class = "button" id = "prosper">HEA PROSPER plan</div>
+		</div>
 	</div>
 
 
