--- a/index.html
+++ b/index.html
@@ -116,12 +116,21 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		<p>
 		While we’ve outlined four income-driven repayment plans, this tool allows for the modeling of many different scenarios. Users can change the percent of discretionary income, the forgiveness period, the minimum monthly payment, and whether the payments are capped at what the borrower would have paid under a ten-year plan. By adjusting the loan amount, users can see what would be repaid (and for how long) for borrowers at different starting income levels.
 		</p>
-		<div id = "clickToExpand" class = "closed">CLICK TO EXPAND PLACEHOLDER</div>
+		<div id = "clickToExpand" class = "closed">Click to Read More</div>
 		<svg id = "gradientHolder"></svg>
         </div>
 
     <div id = "controls">
-    	<div id = "controlsLeft">
+      <div id = "controlTitle">EXPLORING STUDENT LOAN REPAYMENT</div>
+      <div id = "buttons">
+        <div id = "buttonLabel">label that explains these are four scenarios to help you see how interesting this data is</div>
+        <div class = "button" id = "repayeUndergrad">REPAYE undergraduate</div>
+        <div class = "button" id = "repayeGrad">REPAYE graduate</div>
+        <div class = "button" id = "repayePSLF">REPAYE with PSLF</div>
+        <div class = "button" id = "prosper">HEA PROSPER plan</div>
+      </div>
+
+    	<div id = "sliders">
 			<div class = "controlContainer percentDiscretionaryAGI">
 				<div class = "label">Percent discretionary AGI</div>
 				<input id = "percentDiscretionaryAGI" class = "controlSlider" type="range" min="0" max="1" step="0.01" value =".1">
@@ -134,9 +143,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 				<input id = "minPayment" class = "controlSlider" type="range" min="0" max="100" step="1" value ="25">
 				<span class = "prefix">$</span><input type = "number" class = "valLabel" value ="25" min ="0" max="100">
 			</div>
-		</div>
-
-		<div id = "controlsRight">
 			<div class = "controlContainer forgivenessPeriod">
 				<div class = "label">Forgiveness period</div>
 				<input id = "forgivenessPeriod" class = "controlSlider" type="range" min="0" max="50" step="1" value ="25">
@@ -147,12 +153,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		    	<input type="checkbox" id="capAtStandardRepayment" value="cap">
 				<label for="capAtStandardRepayment"></label><div id = "capLabel">Forgive after matching standard 10 year plan</div>
 			</div>
-		</div>
-		<div id = "buttons">
-			<div class = "button" id = "repayeUndergrad">REPAYE undergraduate</div>
-			<div class = "button" id = "repayeGrad">REPAYE graduate</div>
-			<div class = "button" id = "repayePSLF">REPAYE with PSLF</div>
-			<div class = "button" id = "prosper">HEA PROSPER plan</div>
 		</div>
 	</div>
 
