--- a/index.html
+++ b/index.html
@@ -92,30 +92,31 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div id = "topHR"></div> 
         <div class = "pubDate">November 29, 2017</div>
         <p>
-		To help make student loan repayment affordable, the Department of Education offers several  repayment plans that adjust monthly payments based on the borrower’s income. These plans require that borrowers pay a portion of their discretionary income (earnings above 150 percent of the poverty level) for a given period of years, after which the remainder of the loan is forgiven. 
+		To help make student loan repayment affordable, the US Department of Education offers several repayment plans that set monthly payments based on the borrower’s income. These plans require borrowers to pay a portion of their discretionary income (earnings above 150 percent of the federal poverty level) for a given number of years, after which the remainder of the loan is forgiven. 
 		</p>
 		<p>
-		As Congress faces the task of reauthorizing the Higher Education Act, proposals—from both legislators and advocates—to change these income-driven repayment plans abound. The House’s PROSPER Act, introduced late last year, suggested one new version of income-driven repayment, and it’s likely the Senate will suggest another. 
+		As Congress faces the task of reauthorizing the Higher Education Act, proposals to change these income-driven repayment plans abound. Introduced late last year, the House’s PROSPER (or Promoting Real Opportunity, Success, and Prosperity through Education Reform) Act suggested one new version of income-driven repayment, and it’s likely the Senate will suggest another. 
 		</p>
 		<p>
-		The parameters of the repayment plan — the percentage of income paid, the period of repayment, and requirements for minimum or maximum payments — can substantially affect how much borrowers ultimately pay toward their loans. This calculator shows how these parameters affect the amount borrowers will pay (in present dollars) as well as how long it will take to pay off the loan.
+		The parameters of a repayment plan—the percentage of income paid, the period of repayment, and requirements for minimum payments—can substantially affect how much borrowers pay toward their loans. This tool shows how these parameters will affect the amount borrowers will pay (in present dollars) and how long it will take for borrowers to pay off the loan.
 		</p>
 		<p>
-		The buttons in the calculator allow the modeling of four different repayment scenarios for a single borrower with no children. 
+		You can build your own policy by changing parameters, or use the buttons to model existing repayment plans or proposals. By adjusting the loan amount, you can see what would be repaid (and for how long) for borrowers at different starting income levels.
 		</p>
 		<p>
-		The Revised Pay As You Earn (REPAYE) plan for undergraduates permits borrowers to pay 10 percent of their discretionary income, with the remainder of the loan forgiven after 20 years. Borrowers who make less than 150 percent of the poverty threshold pay nothing ($0) on their loans. Because the loans continue to accrue daily interest, it is possible that some borrowers will pay more than they would have under a standard 10-year plan. Dependent undergraduate students can borrow a maximum of $31,000 in federal student loans. 
+		The chart on the left shows how much borrowers would repay based on their starting income. The chart to the right models how long borrowers would be in repayment, again based on their income. We’ve also calculated how much borrowers would repay under a standard 10-year plan to show how an income-driven plan compares with the standard repayment option.  
 		</p>
 		<p>
-		REPAYE for graduate student permits borrowers to pay 10 percent of their discretionary income, with the remainder of the loan forgiven after 25 years. Borrowers who make less than 150 percent of the poverty threshold pay nothing ($0) on their loans. Because the loans continue to accrue daily interest, it is possible that some borrowers will pay more than they would have under a standard 10-year plan. Graduate students can borrow a maximum of $138,500 in federal student loans.
-		Under the Public Service Loan Forgiveness program (PSLF), borrowers on an income-driven repayment plan such as REPAYE who work in a non-profit or public sector job for 10 years are eligible for student loan forgiveness. This benefit is available to those with either undergraduate and graduate student loans.
+		The Revised Pay As You Earn (REPAYE) plan for undergraduates requires borrowers pay 10 percent of their discretionary income, with the remainder of the loan forgiven after 20 years. Because the loans continue to accrue interest, it is possible that some borrowers will pay more than they would have under a standard 10-year plan. Borrowers who make less than 150 percent of the poverty level pay nothing ($0) on their loans. Dependent undergraduate students can borrow a maximum of $31,000 in federal student loans. 
 		</p>
 		<p>
-		The House’s PROSPER plan would require that students pay 15 percent of their discretionary income. Borrowers would have to make a minimum payment of $25 dollars (which may be reduced to $5 due to severe economic hardship). Borrowers do not get loan forgiveness, but their payments end when they have paid what they would have owed under a standard 10-year plan, meaning that borrowers do not pay for additional accrued interest. However, the lack of a loan forgiveness period means that some borrowers might be paying off their loans for the entirety of their careers.
-		</p>
+		REPAYE for graduate students is the same as REPAYE for undergraduates, except that the period before forgiveness is extended to 25 years. Graduate students can borrow a maximum of $138,500 in federal student loans.
 		<p>
-		While we’ve outlined four income-driven repayment plans, this tool allows for the modeling of many different scenarios. Users can change the percent of discretionary income, the forgiveness period, the minimum monthly payment, and whether the payments are capped at what the borrower would have paid under a ten-year plan. By adjusting the loan amount, users can see what would be repaid (and for how long) for borrowers at different starting income levels.
+		Under the Public Service Loan Forgiveness program (PSLF), borrowers on an income-driven repayment plan, such as REPAYE, who work in a nonprofit or public-sector job for 10 years are eligible for student loan forgiveness. This benefit is available to those with either undergraduate and graduate student loans.
 		</p>
+    <p>
+    The House’s PROSPER plan would require students to pay 15 percent of their discretionary income. Borrowers would have to make a minimum monthly payment of $25 dollars (which can be reduced to $5 due to severe economic hardship). And there is no loan forgiveness, but payments end when borrowers have paid what they would have under a standard 10-year plan, meaning that borrowers do not pay for additional accrued interest. The lack of a loan forgiveness period means that some borrowers might be paying off their loans for the entirety of their careers.
+    </p>
 		<div id = "clickToExpand" class = "closed">Click to Read More</div>
 		<svg id = "gradientHolder"></svg>
         </div>
