--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
 </head>
 <body>
 <!-- Google Tag Manager -->
-<!-- <noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MKBD2W"
+<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-MKBD2W"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-MKBD2W');</script> -->
+})(window,document,'script','dataLayer','GTM-MKBD2W');</script>
 <!-- End Google Tag Manager -->
 
 <div id = "isMobile"></div>
@@ -239,18 +239,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 <script>
-    // (function (i, s, o, g, r, a, m) {
-    //     i['GoogleAnalyticsObject'] = r;
-    //     i[r] = i[r] || function () { 
-    //         (i[r].q = i[r].q || []).push(arguments)
-    //     }, i[r].l = 1 * new Date();
-    //     a = s.createElement(o),  m = s.getElementsByTagName(o)[0];
-    //     a.async = 1;
-    //     a.src = g;
-    //     m.parentNode.insertBefore(a, m) 
-    // })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga'); 
-    // ga('create', 'UA-57529944-1', 'auto'); 
-    // ga('send', 'pageview');
+    (function (i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function () { 
+            (i[r].q = i[r].q || []).push(arguments)
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),  m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m) 
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga'); 
+    ga('create', 'UA-57529944-1', 'auto'); 
+    ga('send', 'pageview');
 </script>
 
 <!-- START Parse.ly Include: Standard -->
@@ -258,15 +258,15 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
   <span id="parsely-cfg" data-parsely-site="urban.org"></span>
 </div>
 <script>
-    // (function(s, p, d) {
-    //   var h=d.location.protocol, i=p+"-"+s,
-    //       e=d.getElementById(i), r=d.getElementById(p+"-root"),
-    //       u=h==="https:"?"d1z2jf7jlzjs58.cloudfront.net"
-    //       :"static."+p+".com";
-    //   if (e) return;
-    //   e = d.createElement(s); e.id = i; e.async = true;
-    //   e.src = h+"//"+u+"/p.js"; r.appendChild(e);
-    // })("script", "parsely", document);
+    (function(s, p, d) {
+      var h=d.location.protocol, i=p+"-"+s,
+          e=d.getElementById(i), r=d.getElementById(p+"-root"),
+          u=h==="https:"?"d1z2jf7jlzjs58.cloudfront.net"
+          :"static."+p+".com";
+      if (e) return;
+      e = d.createElement(s); e.id = i; e.async = true;
+      e.src = h+"//"+u+"/p.js"; r.appendChild(e);
+    })("script", "parsely", document);
 </script>
 <!-- END Parse.ly Include: Standard -->
 
