make centered data button

--- a/index.html
+++ b/index.html
@@ -110,7 +110,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 		The Revised Pay As You Earn <span class = "buttonLink repayeUndergrad">(REPAYE) plan for undergraduates</span> requires borrowers pay 10 percent of their discretionary income, with the remainder of the loan forgiven after 20 years. Because the loans continue to accrue interest, it is possible that some borrowers will pay more than they would have under a standard 10-year plan. Borrowers who make less than 150 percent of the poverty level pay nothing ($0) on their loans. Dependent undergraduate students can borrow a maximum of $31,000 in federal student loans. 
 		</p>
 		<p>
-		<span class = "buttonLink repayeGrad">REPAYE for graduate students</span> is the same as REPAYE for undergraduates, except that the period before forgiveness is extended to 25 years. Graduate students can borrow a maximum of $138,500 in federal student loans.
+		<span class = "buttonLink repayeGrad">REPAYE for graduate students</span> is the same as REPAYE for undergraduates, 
+    except that the period before forgiveness is extended to 25 years. Graduate students can borrow up to the cost of attendance at their institution. Average debt for graduate students can range from <a href="https://trends.collegeboard.org/student-aid/figures-tables/masters-degree-recipient-debt-percentage-average-borrowed-2011-12" target="_blank">$21,900</a> to <a href="https://trends.collegeboard.org/student-aid/figures-tables/doctoral-degree-recipient-debt-percentage-average-borrowed-2011-12" target="_blank">$137,500</a>, depending on program.
+    </p>
 		<p>
 		<span class = "buttonLink repayePSLF">Under the Public Service Loan Forgiveness program (PSLF)</span>, borrowers on an income-driven repayment plan, such as REPAYE, who work in a nonprofit or public-sector job for 10 years are eligible for student loan forgiveness. This benefit is available to those with either undergraduate and graduate student loans.
 		</p>
@@ -177,11 +179,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 			<div id = "yearsSubtitle" class="chartSubtitle">By starting income</div>
 		</div>
 	</div>
-  <div id = "notes">
-    <span><strong>Source:</strong> Urban Institute analysis of income-driven repayment plans.</span>
-    <span><strong>Notes:</strong> REPAYE=Revised Pay as You Earn; PROSPER = Promoting Real Opportunity, Success, and Prosperity through Education Reform; PSLF = Public Service Loan Forgiveness. Starting income is starting adjusted gross income.</span>
+  <div id="notes-container">
+    <div id = "notes">
+      <span><strong>Source:</strong> Urban Institute analysis of income-driven repayment plans.</span>
+      <span><strong>Notes:</strong> REPAYE=Revised Pay as You Earn; PROSPER = Promoting Real Opportunity, Success, and Prosperity through Education Reform; PSLF = Public Service Loan Forgiveness. Starting income is starting adjusted gross income.</span>
+    </div>
+    <div class="urban-logo"><span style="color: #1696d2">Urban</span> Institute</div>  
   </div>
-
+  
 	<div id = "downloadData"><a>Download data</a></div>
 </div>
 </div>
