tweak some responsive designs, making charts more centered and notes line up with charts

--- a/index.html
+++ b/index.html
@@ -184,10 +184,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
       <span><strong>Source:</strong> Urban Institute analysis of income-driven repayment plans.</span>
       <span><strong>Notes:</strong> REPAYE=Revised Pay as You Earn; PROSPER = Promoting Real Opportunity, Success, and Prosperity through Education Reform; PSLF = Public Service Loan Forgiveness. Starting income is starting adjusted gross income.</span>
     </div>
-    <div class="urban-logo"><span style="color: #1696d2">Urban</span> Institute</div>  
+    <div class="urban-logo">
+      <div class="urban-logo-text"><span style="color: #1696d2">Urban</span> Institute</div>
+      <div id = "downloadData"><a>Download data</a></div>
+    </div>  
+
   </div>
   
-	<div id = "downloadData"><a>Download data</a></div>
+	
 </div>
 </div>
 
