add gitignore and edit illustration credit

--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     <a href="http://www.urban.org/author/elizabeth-forney" target = "_blank">Elizabeth Forney</a> and <a href="http://www.urban.org/author/alexandra-tilsley" target = "_blank">Alexandra Tilsley</a>
             
                     <h3 class="job">Illustration</h3>
-                    <a href="https://www.urban.org/author/john-wehmann" target = "_blank">John Wehmann</a>
+                    <a href="http://www.urban.org/author/christina-baird" target = "_blank">Christina Baird</a>
 
 
                     <div class="credits"> <a href="https://github.com/urbaninstitute/student-loan-repayment" target="_blank">View this project on Github.</a></div>
