--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 <!-- START HEADER -->
 <div id="header-pinned" class="no-touch">
    <a target="_blank" href="http://www.urban.org" title="Home" rel="home" class="site-logo"></a>
-<div class="title"><span class="feature-link"><a href="https://www.urban.org/features" class="title-linkback" alt="Urban Institute logo">Features</a></div>
+<div class="title"><span class="feature-link"><a href="https://www.urban.org/features" class="title-linkback" alt="Urban Institute logo">Features</a></span></div>
 <div class="share-icons">
     <div class="shareThisP">
         <span onclick="toggle_visibility('shareBox');">
