--- a/index.html
+++ b/index.html
@@ -132,9 +132,18 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         <div class = "button repayeGrad">REPAYE graduate<div class = "currentLaw">current law</div></div>
         <div class = "button repayePSLF">REPAYE with PSLF<div class = "currentLaw">current law</div></div>
         <div class = "button prosper">PROSPER Act<div class = "currentLaw">proposal</div></div>
+        <div class = "button aimHigher">Aim Higher<div class = "currentLaw">proposal</div></div>
       </div>
 
     	<div id = "sliders">
+
+      <div class = "controlContainer incomeExcluded">
+        <div class = "label">Income Excluded Text Stuff</div>
+        <input id = "incomeExcluded" class = "controlSlider" type="range" min="0" max="3" step="0.1" value ="1.5">
+        <!-- <div class = "valLabel">10%</div> -->
+        <input type = "number" class = "valLabel" value ="150" min ="0" max="300"><span class = "suffix">%</span>
+      </div>
+
 			<div class = "controlContainer percentDiscretionaryAGI">
 				<div class = "label">Percent of discretionary income borrower pays</div>
 				<input id = "percentDiscretionaryAGI" class = "controlSlider" type="range" min="0" max="1" step="0.01" value =".1">
