--- a/index.html
+++ b/index.html
@@ -137,35 +137,85 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     	<div id = "sliders">
 
-      <div class = "controlContainer incomeExcluded">
-        <div class = "label">Income Excluded Text Stuff</div>
-        <input id = "incomeExcluded" class = "controlSlider" type="range" min="0" max="3" step="0.1" value ="1.5">
-        <!-- <div class = "valLabel">10%</div> -->
-        <input type = "number" class = "valLabel" value ="150" min ="0" max="300"><span class = "suffix">%</span>
+      <div id = "monthlyContainer" class = "controlRow">
+        <div class = "controlHeader">What's the monthly payment?</div>
+
+        <div class = "controlContainer percentDiscretionaryAGI">
+          <div class = "label">Percent of discretionary income borrower pays</div>
+          <input id = "percentDiscretionaryAGI" class = "controlSlider" type="range" min="0" max="1" step="0.01" value =".1">
+          <!-- <div class = "valLabel">10%</div> -->
+          <input type = "number" class = "valLabel" value ="10" min ="0" max="100"><span class = "suffix">%</span>
+        </div>
+
+        <div class = "controlContainer minPayment">
+          <div class = "label">Minimum monthly payment</div>
+          <input id = "minPayment" class = "controlSlider" type="range" min="0" max="100" step="1" value ="0">
+          <span class = "prefix">$</span><input type = "number" class = "valLabel" value ="0" min ="0" max="100">
+        </div>
       </div>
 
-			<div class = "controlContainer percentDiscretionaryAGI">
-				<div class = "label">Percent of discretionary income borrower pays</div>
-				<input id = "percentDiscretionaryAGI" class = "controlSlider" type="range" min="0" max="1" step="0.01" value =".1">
-				<!-- <div class = "valLabel">10%</div> -->
-				<input type = "number" class = "valLabel" value ="10" min ="0" max="100"><span class = "suffix">%</span>
-			</div>
+      <div id = "monthlyContainer" class = "controlRow">
+        <div class = "controlHeader">What is the base income?</div>
 
-			<div class = "controlContainer minPayment">
-				<div class = "label">Minimum monthly payment</div>
-				<input id = "minPayment" class = "controlSlider" type="range" min="0" max="100" step="1" value ="0">
-				<span class = "prefix">$</span><input type = "number" class = "valLabel" value ="0" min ="0" max="100">
-			</div>
-			<div class = "controlContainer forgivenessPeriod">
-				<div class = "label">Forgiveness period</div>
-				<input id = "forgivenessPeriod" class = "controlSlider" type="range" min="0" max="50" step="1" value ="20">
-				<input id = "forgivenessPeriodLabel" type = "number" class = "valLabel" value = "20" min = "0" max = "50"><span class = "suffix years">years</span>
-				<div id = "noForgiveness">No forgiveness period</div>
-			</div>
-			<div class = "controlContainer capAtStandardRepayment">
-		    	<!-- <input type="checkbox" id="capAtStandardRepayment" value="cap"> -->
-				<label for="capAtStandardRepayment"></label><div id = "capLabel">Limit total amount paid to amount repaid under 10-year plan</div>
-        <div class = "switch off" id="capAtStandardRepayment" ></div>
+        <div class = "controlContainer percentFPL">
+          <div class = "label">Discretionary income cutoff</div>
+          <input id = "percentFPL" class = "controlSlider" type="range" min="0" max="3" step="0.1" value ="1.5">
+          <!-- <div class = "valLabel">10%</div> -->
+          <input type = "number" class = "valLabel" value ="150" min ="0" max="300"><span class = "suffix">%</span>
+        </div>
+
+
+        <div class = "controlContainer excludeIncome">
+          <label for="excludeIncome"></label><div id = "capLabel">Reduce discretionary income cutoff based on income</div>
+          <div class = "switch off" id="excludeIncome" ></div>
+        </div>
+
+        <div class = "controlContainer fplIncome">
+          <div class = "label">For income over</div>
+          <input id = "fplIncome" class = "controlSlider" type="range" min="80000" max="140000" step="1000" value ="120000">
+          <!-- <div class = "valLabel">10%</div> -->
+          <span class = "prefix">$</span><input type = "number" class = "valLabel fplIncome" value ="120000" min ="80000" max="140000">
+        </div>
+
+        <div class = "controlContainer fplReduction">
+          <div class = "label">Reduce by</div>
+          <input id = "fplReduction" class = "controlSlider" type="range" min=".01" max=".1" step=".01" value =".05">
+          <!-- <div class = "valLabel">10%</div> -->
+          <input type = "number" class = "valLabel fplReduction" value ="5" min ="1" max="10"><span class = "suffix long">% per $1,000 in income</span>
+        </div>
+      </div>
+
+			<div id = "monthlyContainer" class = "controlRow">
+        <div class = "controlHeader">When do payments stop?</div>
+
+        <div class = "controlContainer capAtStandardRepayment">
+        <!-- <input type="checkbox" id="capAtStandardRepayment" value="cap"> -->
+          <label for="capAtStandardRepayment"></label><div id = "capLabel">Limit total amount paid to amount repaid under 10-year plan</div>
+          <div class = "switch off" id="capAtStandardRepayment" ></div>
+        </div>
+
+        <div class = "controlContainer forgivenessPeriod">
+          <div class = "label">Forgiveness period</div>
+            <input id = "forgivenessPeriod" class = "controlSlider" type="range" min="0" max="50" step="1" value ="20">
+            <input id = "forgivenessPeriodLabel" type = "number" class = "valLabel" value = "20" min = "0" max = "50"><span class = "suffix years">years</span>
+            <div id = "noForgiveness">No forgiveness period</div>
+        </div>
+
+        <div class = "controlContainer capAtPercentPayment">
+        <!-- <input type="checkbox" id="capAtStandardRepayment" value="cap"> -->
+          <label for="capAtPercentPayment"></label><div id = "capLabel">Limit total interest to percent of initial loan</div>
+          <div class = "switch off" id="capAtPercentPayment" ></div>
+        </div>
+
+        <div class = "controlContainer percentLoan">
+          <div class = "label">Percent initial loan</div>
+          <input id = "percentLoan" class = "controlSlider" type="range" min="0" max="1" step="0.1" value =".5">
+          <!-- <div class = "valLabel">10%</div> -->
+          <input type = "number" class = "valLabel percentLoan" value ="50" min ="0" max="100"><span class = "suffix">%</span>
+        </div>
+
+
+      </div>
 
 			</div>
 		</div>
