--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
     	<div id = "sliders">
 
-      <div id = "monthlyContainer" class = "controlRow">
+      <div id = "monthlyContainer" class = "controlRow grey">
         <div class = "controlHeader">Define discretionary income</div>
 
         <div class = "controlContainer percentFPL">
@@ -197,7 +197,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
 
 
-			<div id = "monthlyContainer" class = "controlRow">
+			<div id = "monthlyContainer" class = "controlRow grey">
         <div class = "controlHeader">Define when payments stop</div>
 
         <div class = "controlContainer capAtStandardRepayment">
