--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
     <p>
     House Democrat&rsquo;s <span class = "buttonLink aimHigher">Aim Higher plan</span> would require students to pay 10 percent of their discretionary income. The plan would also redefine discretionary income as income earned above 250 percent of the federal poverty level, meaning that more borrowers would be eligible for $0 payments. However, for every $1,000 earned above $120,000, this 250 percent discretionary income threshold is reduced by 5 percent. Aim Higher would cap payments after 20 years or after the borrower has paid an amount equal to 150 percent of the principal loan amount.
     </p>
-		<div id = "clickToExpand" class = "closed">Click to Read More</div>
+		<div id = "clickToExpand" class = "closed">Click to read more</div>
 		<svg id = "gradientHolder"></svg>
         </div>
 
